# many-radios-qt

./: CMakeLists.txt  LICENSE  README.md  README_ZH.md
package/: CMakeLists.txt
package/debian/: many-radios.desktop
src/: CMakeLists.txt  appConfig.hpp.in  assets.qrc  core.cpp  core.hpp  main.cpp
src/i18n/: app_zh_CN.qm  app_zh_CN.ts
src/links/: favorites.cpp  favorites.hpp  language.cpp  language.hpp  radio.cpp  radio.hpp  radios.cpp  radios.hpp  search.cpp  search.hpp  theme.cpp  theme.hpp  topRadios.cpp  topRadios.hpp
src/models/: radio.cpp  radio.hpp
src/network/: radio.cpp  radio.hpp  search.cpp  search.hpp
src/pages/: About.qml  MyFavorites.qml  Search.qml  Settings.qml  Tops.qml
src/persistence/: persistence.cpp  persistence.hpp  radio.cpp  radio.hpp  settings.cpp  settings.hpp
src/qmodels/: radios.cpp  radios.hpp
src/utils/: util.cpp  util.hpp
src/widgets/: Favicon.qml  MainWindow.qml  NavButton.qml  Navbar.qml  PlayControl.qml  Radio.qml  Radios.qml  SomeTopRadios.qml  TopRadios.qml
